plugins {
    id 'java'
    id 'eclipse'
    id 'idea'
}

var isBuildingBitwig = rootProject.getName().equals("bitwig")

if (isBuildingBitwig)
{
    dependencies {
        implementation project(':base-extensions-api')
    }
}
else
{
    repositories {
        maven {
            url = uri('https://maven.bitwig.com/')
        }
    }

    dependencies {
        implementation 'com.bitwig:extension-api:18'
    }
}

group = 'com.bitwig.extensions'
description = 'Bitwig Studio Extensions (Github)'

java {
    sourceCompatibility = JavaVersion.VERSION_16

    jar {
        archiveFileName = 'BitwigControllers.bwextension'
    }
}
